// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animate next classNames 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={true}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={true}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide animateOut next"
    />
    <div
      className="slide animateIn next"
    />
    <div
      className="slide hidden"
    />
  </div>
</div>
`;

exports[`animate previous classNames 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={true}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={true}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide animateOut previous"
    />
    <div
      className="slide hidden"
    />
    <div
      className="slide animateIn previous"
    />
  </div>
</div>
`;

exports[`renders one child 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={true}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={true}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`renders three children 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={false}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={false}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
    <div
      className="slide next"
    />
    <div
      className="slide previous"
    />
  </div>
</div>
`;

exports[`renders two children 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={true}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={false}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
    <div
      className="slide next"
    />
  </div>
</div>
`;

exports[`with one child can not navigate to next 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={true}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={true}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with one child can not navigate to previuous 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={true}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={true}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with two children can navigate to next 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={false}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={true}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide previous"
    />
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with two children can navigate to next only once 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={false}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={true}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide previous"
    />
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with two children can not navigate to previuous 1`] = `
<div
  className="slider"
>
  <button
    className="previousButton"
    disabled={true}
    onClick={[Function]}
  >
    previous
  </button>
  <button
    className="nextButton"
    disabled={false}
    onClick={[Function]}
  >
    next
  </button>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
    <div
      className="slide next"
    />
  </div>
</div>
`;
